--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm 24, and have lived in FL for most of my life.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sunny Orlando</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Reading and Watching Movies</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creative Director</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To be useful.</p>
     </section>
 
     <footer id="footer">
